fix width of input on mobiles

--- a/kursadict/static/css/base.css
+++ b/kursadict/static/css/base.css
@@ -271,13 +271,28 @@ footer {
     // padding-top: 20px;
     // padding-bottom: 20px;
   }
+
+  form#neahttasaanit {
+  	width: 100%;
+  }
+  form#neahttasaanit input {
+  	max-width: 9em;
+    font-size: 20px;
+  }
 }
 
 /* Mobile-specific tweaks */
 @media (max-width: 550px) {
-    content {
-        margin-top: -20px;
-    }
+  content {
+      margin-top: -20px;
+  }
+  form#neahttasaanit {
+  	width: 100%;
+  }
+  form#neahttasaanit input {
+  	max-width: 9em;
+    font-size: 20px;
+  }
 }
 
 @media (min-width: 550px) and (max-width: 820px) {
